Отредактированы интеграционные и юнит тесты по результатам ревью