@@ -2,25 +2,59 @@ plugins {
     id 'java'
     id 'org.openapi.generator'
 }
+
 dependencies {
     implementation project(':bookstore-schemas')
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    testImplementation 'org.testcontainers:testcontainers:1.20.6'
+    testImplementation 'org.testcontainers:postgresql:1.20.6'
+    testImplementation 'org.testcontainers:junit-jupiter:1.20.6'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+
+    testImplementation 'com.github.docker-java:docker-java-api:3.4.0'
+    testImplementation 'com.github.docker-java:docker-java-core:3.4.0'
+    testImplementation 'com.github.docker-java:docker-java-transport-httpclient5:3.4.0'
+
+    testImplementation 'com.jayway.jsonpath:json-path:2.9.0'
+}
+
+test {
+    useJUnitPlatform()
+
+    environment "DOCKER_HOST", "unix:///var/run/docker.sock"
+
+    systemProperty "docker.client.version", "1.40"
+    systemProperty "testcontainers.ignore.failures", "true"
+
+    testLogging {
+        showStandardStreams = true
+        exceptionFormat = 'full'
+    }
+}
+
+tasks.named('bootRun') {
+    mainClass.set("org.example.Main")
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
 test {
     useJUnitPlatform()
-}
-tasks.named('bootRun') {
-    mainClass.set("org.example.Main")
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+    jvmArgs '-Xshare:off'
 }
 
 openApiGenerate {
     generatorName = "spring"
     inputSpec = "$rootDir/bookstore-schemas/schemas/openapi.yaml"
-    outputDir = "$buildDir/generated"
+    outputDir = layout.buildDirectory.dir("generated").get().asFile
 
     globalProperties = [
             models: "",
